package com.directi.training.isp.solution;

public interface Door {
    void lock();
    void unlock();
    void open();
    void close();
}
