package com.directi.training.isp.solution;

public interface ProximitySensitive extends Door {
    void proximityCallback();
}
