package com.directi.training.isp.solution;

public interface Timed extends Door {
    void timeOutCallback();
}
